# aoc

./: .gitignore  Cargo.toml
aoc2015/: Cargo.toml
aoc2015/benches/: benches.rs
aoc2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
aoc2015/src/aoc15/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc2015/src/util/: submit.rs
aoc2016/: Cargo.toml
aoc2016/benches/: benches.rs
aoc2016/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
aoc2016/src/aoc16/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day15.rs
aoc2016/src/util/: submit.rs
aoc2024/: Cargo.toml
aoc2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
aoc2024/src/aoc24/: day22.rs
aoc2025/: Cargo.toml
aoc2025/benches/: benches.rs
aoc2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs  main.rs
aoc2025/src/aoc25/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
aoc2025/src/util/: direction.rs  gridtools.rs  mod.rs  pathfinding.rs  submit.rs
generator/: Cargo.toml
generator/templates/: runner_cargo_template.txt
runner/: Cargo.toml
runner/benches/: benches.rs
runner/src/: cli.rs  main.rs
scrape_solutions/: Cargo.toml
scrape_solutions/src/: main.rs
util/: Cargo.toml
util/src/: direction.rs  gridtools.rs  lib.rs  pathfinding.rs  submit.rs
