[workspace]
resolver = "3"
members = ["aoc2015", "aoc2016", "aoc2024", "aoc2025"]

[workspace.dependencies]
divisors_fixed = "0.4.0"
exhaust = "0.2.4"
fancy-regex = "0.16.2"
itertools = "0.14.0"
md5 = "0.8.0"
peg = "0.8.5"
rayon = "1.11.0"
reqwest = "0.12.24"
rustc-hash = "2.1.1"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
