[workspace]
resolver = "3"
members = ["aoc2015", "aoc2016", "aoc2024", "aoc2025","generator", "runner", "util"]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] , default-features = false }
md5 = { default-features = false, version = "^0.8.0" }
peg = { default-features = false, version = "^0.8.5" }
pathfinding = { default-features = false, version = "^4.14.0" }
fancy-regex = { default-features = false, version = "^0.17.0" }
rayon = { default-features = false, version = "^1.11.0" }
clap = { default-features = false, version = "^4.5.53" }
rustc-hash = { default-features = false, version = "^2.1.1" }
grid = { default-features = false, version = "^1.0.0" }
exhaust = { default-features = false, version = "^0.2.4" }
petgraph = { default-features = false, version = "^0.8.3" }
itertools = { default-features = false, version = "^0.14.0" }
