[package]
name = "aoc2015"
version = "0.1.0"
edition = "2024"

[dependencies]
divisors_fixed = { workspace = true }
exhaust = { workspace = true }
fancy-regex = { workspace = true }
itertools = { workspace = true }
md5 = { workspace = true }
peg = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }


[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = "0.7.0"
paste = "1.0.15"
