[package]
name = "aoc2015"
version = "0.1.0"
edition = "2024"

[dependencies]
divisors_fixed = "0.4.0"
exhaust = { workspace = true, default-features = true }
fancy-regex = { workspace = true, default-features = true }
itertools = { workspace = true, default-features = true }
md5 = { workspace = true, default-features = true }
peg = { workspace = true, default-features = true }
rayon = { workspace = true, default-features = true }
rustc-hash = { workspace = true, default-features = true }
serde_json = "1.0.145"
util = { path = "../util" }
