[package]
name = "aoc2016"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = { workspace = true }
exhaust = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
phf = { version = "0.13.1", features = ["macros"] }
regex-lite = "0.1.8"
md5 = { workspace = true }
fancy-regex = { workspace = true }
atoi = "2.0.0"
indexmap = "2.12.1"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = "0.7.0"
paste = "1.0.15"
