[package]
name = "aoc2016"
version = "0.1.0"
edition = "2024"

[dependencies]
atoi = "2.0.0"
fancy-regex = { workspace = true, default-features = true }
indexmap = "2.12.1"
itertools = { workspace = true, default-features = true }
md5 = { workspace = true, default-features = true }
phf = { version = "0.13.1", features = ["macros"] }
rayon = { workspace = true, default-features = true }
regex-lite = "0.1.8"
rustc-hash = { workspace = true, default-features = true }
util = { path = "../util" }
