[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = { version = "0.56.0", features = ["async_tokio_rt_multi_thread"] }
grid = { version = "1.0.0", features = ["serde"] }
num = "0.4.3"
pathfinding = "4.14.0"
petgraph = { version = "0.8.3", features = ["rayon"] }
regex = "1.11.1"
serde = "1.0.215"

divisors_fixed = { workspace = true }
exhaust = { workspace = true }
fancy-regex = { workspace = true }
itertools = { workspace = true }
md5 = { workspace = true }
peg = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = "0.7.0"
paste = "1.0.15"
