[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = "0.56.0"
exhaust = { workspace = true, default-features = true }
grid = { workspace = true, default-features = true }
itertools = { workspace = true, default-features = true }
pathfinding = { workspace = true, default-features = true }
peg = { workspace = true, default-features = true }
petgraph = { workspace = true, default-features = true }
rayon = { workspace = true, default-features = true }
regex = "1.12.2"
rustc-hash = { workspace = true, default-features = true }
util = { path = "../util" }
