[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
grid = { workspace = true, default-features = true }
highs = "2.0.0"
itertools = { workspace = true, default-features = true }
pathfinding = { workspace = true, default-features = true }
petgraph = { workspace = true, default-features = true }
rayon = { workspace = true, default-features = true }
rustc-hash = { workspace = true, default-features = true }
util = { path = "../util" }
