[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
chrono = "0.4.42"
clap = { features = ["derive"] , workspace = true, default-features = true }
itertools = { workspace = true, default-features = true }
parking_lot = "0.12.5"
rustc-hash = { workspace = true, default-features = true }
upon = { version = "0.10.0" }
