[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
paste = "1.0.15"
util = { path = "../util" }
clap = { version = "4.5.53", features = ["derive"] }

aoc2015 = { path = "../aoc2015" }

aoc2016 = { path = "../aoc2016" }

aoc2024 = { path = "../aoc2024" }

aoc2025 = { path = "../aoc2025" }
