[package]
name = "scrape_solutions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { workspace = true, default-features = true, features = ["derive"] }
reqwest = { workspace = true, default-features = true }
scraper = "0.25.0"
tokio.workspace = true
tokio.default-features = true
util = { path = "../util" }
